# ai-model-rotation

./: .editorconfig  .gitignore  AGENTS.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  aig-claude.bat  aig-opencode.bat  aig-server.bat  issues.md  package.json  phase.md  prompt.md  settings.json
backend/: .env.example  README.md  aigateway.spec  alembic.ini  pyproject.toml  run.py  test_migration_run.db-journal  test_notifications.db-journal
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260629_1430-7098b5331f5d_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  constants.py  database.py  desktop_tray.py  exceptions.py  logging.py  scheduler.py  security.py  single_instance.py  windows_autostart.py
backend/app/domain/: __init__.py  enums.py
backend/app/middleware/: __init__.py  logging.py  rate_limit.py
backend/app/repositories/: __init__.py  api_key_repository.py  backup_repository.py  base.py  health_log_repository.py  model_repository.py  notification_repository.py  provider_repository.py  request_log_repository.py  setting_repository.py  statistic_repository.py  user_repository.py
backend/app/routers/: __init__.py  agents.py  auth.py  backups.py  gateway.py  health.py  keys.py  logs.py  models.py  notifications.py  providers.py  settings.py  statistics.py
backend/app/schemas/: __init__.py  api_key.py  backup.py  common.py  gateway.py  log.py  model.py  notification.py  provider.py  setting.py  statistic.py  user.py
backend/app/services/: __init__.py  api_key_service.py  auth_service.py  backup_service.py  config_hot_reload.py  gateway_service.py  provider_service.py  routing_engine.py  scheduler_jobs.py
backend/app/utils/: token_estimator.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_api.py
(+127 files in other folders)
