[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-gateway-pro-backend"
version = "1.0.0"
description = "AI Gateway Pro - Backend API & Service (Phase 1 Foundation)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AI Gateway Pro Team", email = "[email protected]"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0.34",
    "alembic>=1.13.2",
    "pymysql>=1.1.1",
    "cryptography>=43.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.2",
    "httpx>=0.27.2",
    "apscheduler>=3.10.4",
    "structlog>=24.4.0",
    "python-multipart>=0.0.10",
    "tenacity>=9.0.0",
    "orjson>=3.10.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "anyio>=4.6.0",
    "ruff>=0.6.7",
    "mypy>=1.11.2",
]

[project.urls]
Documentation = "https://github.com/ai-gateway-pro/docs"
Repository = "https://github.com/ai-gateway-pro/backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "RUF"]
ignore = ["S101", "S104", "E501"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
